# univ3-kit

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  foundry.toml
.github/: dependabot.yaml
.github/workflows/: lint.yml  test.yml
configs/: example.toml  stable_pool.toml
src/: main.rs
src/behaviors/: arbitrageur.rs  deployer.rs  liquidity_admin.rs  mod.rs  pool_admin.rs  price_changer.rs  terminator.rs  token_admin.rs
src/bindings/: address.rs  address_string_util.rs  base_64.rs  bit_math.rs  block_timestamp.rs  bytes_lib.rs  callback_validation.rs  chain_id.rs  context.rs  counters.rs  ecdsa.rs  eip712.rs  enumerable_map.rs  enumerable_set.rs  erc165.rs  erc20.rs  erc20_permit.rs  erc721.rs  erc721_permit.rs  fixed_point_128.rs  fixed_point_96.rs  full_math.rs  hex_strings.rs  i_multicall.rs  i_nonfungible_position_manager.rs  i_nonfungible_token_position_descriptor.rs  i_periphery_immutable_state.rs  i_periphery_payments.rs  i_periphery_payments_with_fee.rs  i_pool_initializer.rs  i_quoter.rs  i_quoter_v2.rs  i_self_permit.rs  i_swap_router.rs  i_tick_lens.rs  i_uniswap_v2_pair.rs  i_uniswap_v3_factory.rs  i_uniswap_v3_flash_callback.rs  i_uniswap_v3_mint_callback.rs  i_uniswap_v3_pool.rs  (+79 more)
