[package]
name = "arbiter-univ3"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
arbiter-bindings = "0.1.6"
arbiter-core = "0.10.3"
arbiter-macros = "0.1.3"
arbiter-engine = "0.3.1"
tokio = { version = "1.36.0", features = ["full"] }
ethers = "2.0.10"
serde = { version = "1.0.189", features = ["derive"] }
anyhow = "1.0.79"
async-trait = "0.1.74"
clap = { version = "4.4.8", features = ["derive"] }
serde_json = "1.0.113"
log = "0.4.20"
futures-util = "0.3.30"
